
  - A new monitor command 'xb <addr> <len>' shows the validity bits of
    <len> bytes at <addr>.  The monitor command 'xb' is easier to use
    than get_vbits when you need to associate byte data value with
    their corresponding validity bits.

  - The 'block_list' monitor command now accepts an optional argument
    'limited <max_blocks>' to control the nr of block addresses
    printed.

  - The C helper functions used to instrument loads on x86-linux and
    arm-linux (both 32-bit only) have been replaced by handwritten
    assembly sequences.  This gives speedups in the region of 0% to 7%
    for those targets only.

  - New command line option: --expensive-definedness-check=<yes|no> which
    is useful to avoid occasional invalid complaints on optimised code.
    Watchout for runtime degradation: 25% have been observed but, as always,
    this is highly application specific.

* Massif:

  - New monitor command 'all_snapshots <filename>' that dumps all
    snapshots taken so far.

* Helgrind:

  - Significant memory reduction and moderate speedups for
    --history-level=full for applications accessing a lot of memory
    with many different stacktraces.

  - The default value for --conflict-cache-size=N has been doubled to
    2000000.  Users that were not using the default value should
    preferably also double the value they give.

    The default was changed due to the changes in the "full history"
    implementation.  Doubling the value gives on average a slightly more
    complete history and uses similar memory (or significantly less memory
    in the worst case) than the previous implementation.
    
  - The Helgrind monitor command 'info locks' now accepts an optional
    argument 'lock_addr', which shows information about the lock at the
    given address only.

  - When using --history-level=full, the new Helgrind monitor command
    'accesshistory <addr> [<len>]' will show the recorded accesses for
    <len> (or 1) bytes at <addr>.
